# Sapphillon-Core

./: AGENTS.md  Cargo.toml  LICENSE  Makefile  buf.gen.yaml  developers.md  ext_plugin_call_stack.md  sapphillon_core_callgraph.md
.cargo/: config.toml  config.toml.bak
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: release.yml  testing.yml
ext_plugin/: Cargo.toml  build.rs  test.js
ext_plugin/src/: cert_store.rs  extplugin_runner_process.rs  lib.rs  main.rs  module_loader.rs  npm.rs  package.rs  parse_package.rs  permissions.rs  runner.rs  rust_js_bridge.rs  test_package.js  worker.rs
proto/: Cargo.toml
proto/src/: lib.rs
proto/src/proto/: google.api.expr.v1alpha1.rs  google.api.expr.v1beta1.rs  google.api.rs  google.longrunning.rs  google.protobuf.compiler.rs  google.protobuf.rs  google.rpc.context.rs  google.rpc.rs  google.type.rs  sapphillon.ai.v1.rs  sapphillon.ai.v1.tonic.rs  sapphillon.v1.rs  sapphillon.v1.tonic.rs
proto/src/proto/google/api/: google.api.rs  google.api.serde.rs
proto/src/proto/google/api/expr/v1alpha1/: google.api.expr.v1alpha1.rs  google.api.expr.v1alpha1.serde.rs
proto/src/proto/google/api/expr/v1beta1/: google.api.expr.v1beta1.rs  google.api.expr.v1beta1.serde.rs
proto/src/proto/google/bytestream/: google.bytestream.rs  google.bytestream.serde.rs  google.bytestream.tonic.rs
proto/src/proto/google/geo/r#type/: google.geo.type.rs  google.geo.type.serde.rs
proto/src/proto/google/longrunning/: google.longrunning.rs  google.longrunning.tonic.rs
proto/src/proto/google/protobuf/: google.protobuf.rs  google.protobuf.serde.rs
proto/src/proto/google/protobuf/compiler/: google.protobuf.compiler.rs  google.protobuf.compiler.serde.rs
proto/src/proto/google/r#type/: google.type.rs
proto/src/proto/google/rpc/: google.rpc.rs  google.rpc.serde.rs
proto/src/proto/google/rpc/context/: google.rpc.context.rs  google.rpc.context.serde.rs
proto/src/proto/sapphillon/ai/v1/: sapphillon.ai.v1.rs  sapphillon.ai.v1.serde.rs  sapphillon.ai.v1.tonic.rs
proto/src/proto/sapphillon/v1/: sapphillon.v1.rs  sapphillon.v1.serde.rs  sapphillon.v1.tonic.rs
src/: core.rs  error.rs  extplugin_rsjs_bridge.rs  lib.rs  permission.rs  plugin.rs  proto.rs  runtime.rs  utils.rs  workflow.rs
src/proto/: google.api.expr.v1alpha1.rs  google.api.expr.v1beta1.rs  google.api.rs  google.bytestream.rs  google.geo.type.rs  google.longrunning.rs  google.protobuf.rs  google.rpc.context.rs  google.rpc.rs  google.type.rs  sapphillon.ai.v1.rs  sapphillon.v1.rs  sapphillon.v1.tonic.rs
src/utils/: check_path.rs  check_url.rs
tests/: integration_extplugin.rs
tests/fixtures/: plugin_package.js  plugin_package_errors.js  plugin_package_with_permission.js
