[workspace.package]
name = "sapphillon_core"
version = "0.8.6"
edition = "2024"
authors = ["Yuta Takahashi <y.highbridge04@gmail.com>"]
license = "MPL-2.0 OR GPL-3.0-or-later"
readme = "README.md"
description = "Core library for Sapphillon, a Rust-based Workflow runtime."
repository = "https://github.com/Walkmana-25/Sapphillon-Core"
homepage = "https://github.com/Walkmana-25/Sapphillon-Core"

[workspace]
resolver = "3"
members = ["ext_plugin/"]

[workspace.dependencies]
anyhow = { version = "1.0", default-features = false }
tokio = "1"
log = "0.4"
chrono = { version = "0.4", default-features = false }
env_logger = { version = "0.11", default-features = false }
tonic = { version = "0.12.0", default-features = false, features = ["codegen", "prost", "transport"] }
prost = { version = "0.13.1", default-features = false, features = ["std"] }
prost-types = { version = "0.13.1", default-features = false }
async-trait = "0.1"
deno_core = { version = "0.355.0", default-features = false }
deno_error = "0.7.3"
unescaper = "0.1.6"
thiserror = "2.0.17"
url = "2.5.7"

sys_traits = "0.1.17"
deno_lib = "0.39.0"
deno_web = "0.252.0"
deno_error = "0.7.0"
deno_runtime = { version = "0.229.0", features = ["snapshot"] }
deno_permissions = "0.80.0"
deno_fs = "0.131.0"
deno_broadcast_channel = "0.215.0"
deno_fetch = "0.245.0"
node_resolver = "0.59.0"
deno_resolver = "0.52.0"
deno_node = "0.159.0"
once_cell = "1.21.3"
deno_tls = "0.208.0"

[package]
name = "sapphillon_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
log.workspace = true
chrono.workspace = true
env_logger.workspace = true
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
async-trait.workspace = true
deno_core.workspace = true
deno_error.workspace = true
unescaper.workspace = true
thiserror.workspace = true
url.workspace = true
deno_runtime.workspace = true
deno_lib.workspace = true
node_resolver.workspace = true
deno_resolver.workspace = true
once_cell.workspace = true
deno_permissions.workspace = true

# Patch to fix temporal_rs 0.0.11 and timezone_provider version mismatch
# temporal_rs 0.0.11 requires timezone_provider ~0.0.11, but deno_lib brings in 0.0.16
[patch.crates-io]
timezone_provider = { git = "https://github.com/boa-dev/temporal", tag = "v0.0.11" }
