[workspace.package]
version = "0.17.0"
edition = "2024"
authors = ["Yuta Takahashi <y.highbridge04@gmail.com>"]
license = "MPL-2.0 OR GPL-3.0-or-later"
readme = "README.md"
description = "Core library for Sapphillon, a Rust-based Workflow runtime."
repository = "https://github.com/Walkmana-25/Sapphillon-Core"
homepage = "https://github.com/Walkmana-25/Sapphillon-Core"

[workspace]
resolver = "3"
members = ["ext_plugin", "proto"]

[workspace.dependencies]
# Workspace Internal Packages
proto = { path = "proto" }
ext_plugin = { path = "ext_plugin" }

# Error Handling
anyhow = { version = "1.0", default-features = false }
thiserror = "2.0.18"
deno_error = "0.7.0"

# Async Runtime & Utilities
tokio = "1"

# Serialization
serde = "1.0.228"
serde_json = "1.0.149"

# Protobuf / gRPC
tonic = { version = "0.14.1", default-features = false, features = ["codegen", "transport"] }
tonic-prost = "0.14.1"
prost = { version = "0.14.1", default-features = false, features = ["std"] }
prost-types = { version = "0.14.1", default-features = false }
pbjson = "0.9.0"

# Deno Dependencies
deno_core = { version = "0.363.0", default-features = false }
deno_runtime = { version = "0.229.0", features = ["snapshot"] }
deno_lib = "0.39.0"
node_resolver = "0.59.0"
sys_traits = "0.1.17"

# Utilities
url = "2.5.8"
regex = "1.11.1"
indexmap = "2.7"
once_cell = "1.21.3"
unescaper = "0.1.8"

# Platform-Specific
windows-sys = { version = "0.61.2", features = ["Win32_System_SystemInformation"] }

[package]
name = "sapphillon_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Workspace Internal Packages
proto.workspace = true
ext_plugin.workspace = true

# Error Handling
anyhow.workspace = true
thiserror.workspace = true
deno_error.workspace = true

# Async Runtime & Utilities
tokio.workspace = true

# Serialization
serde_json.workspace = true

# Deno Dependencies
deno_core.workspace = true

# Utilities
url.workspace = true
regex.workspace = true
indexmap.workspace = true
unescaper.workspace = true

[dev-dependencies]
# Testing
serial_test = "3.2"
tempfile = "3"

# Patch to fix temporal_rs 0.0.11 and timezone_provider version mismatch
# temporal_rs 0.0.11 requires timezone_provider ~0.0.11, but deno_lib brings in 0.0.16
[patch.crates-io]
timezone_provider = { git = "https://github.com/boa-dev/temporal", tag = "v0.0.11" }
