[package]
name = "proto"
version = "0.9.0"
edition = "2024"
authors = ["Yuta Takahashi <y.highbridge04@gmail.com>"]
license = "MPL-2.0 OR GPL-3.0-or-later"
description = "Protocol Buffer definitions for Sapphillon"
repository = "https://github.com/Walkmana-25/Sapphillon-Core"
homepage = "https://github.com/Walkmana-25/Sapphillon-Core"

[dependencies]
tonic = { version = "0.12.0", default-features = false, features = ["codegen", "prost", "transport"] }
prost = { version = "0.13.1", default-features = false, features = ["std"] }
prost-types = { version = "0.13.1", default-features = false }
