[package]
name = "proto"
version = "0.10.0"
edition = "2024"
authors = ["Yuta Takahashi <y.highbridge04@gmail.com>"]
license = "MPL-2.0 OR GPL-3.0-or-later"
description = "Protocol Buffer definitions for Sapphillon"
repository = "https://github.com/Walkmana-25/Sapphillon-Core"
homepage = "https://github.com/Walkmana-25/Sapphillon-Core"

[dependencies]
# Protobuf / gRPC
tonic.workspace = true
tonic-prost.workspace = true
prost.workspace = true
prost-types.workspace = true
pbjson.workspace = true
pbjson-build.workspace = true
pbjson-types.workspace = true

# Serialization
bytes.workspace = true
serde.workspace = true
